# rosetta-preview

./: .clang-format  .gitignore  BINDING-SOLUTION.md  CMakeLists.txt  README.md  TODO.md  rosetta-gen.py
cmake/: Findrosetta.cmake
doc/: ARRAY_REGISTRATION.md  ENUM_REGISTRATION.md  TYPE_REGISTRATION.md  VECTOR_REGISTRATION.md
examples/: README.md  classes_demo.h
examples/api/: API.yaml  README.md  api.h  test.js  test_yaml.yaml
examples/cpp/game/: CMakeLists.txt  main.cxx
examples/cpp/simple/: CMakeLists.txt  main.cxx
examples/javascript/array/: CMakeLists.txt  binding.cxx  package.json  test.js
examples/javascript/basic/: CMakeLists.txt  binding.cxx  package.json  test.js
examples/javascript/classes/: binding.cxx  binding.gyp  test.js
examples/javascript/complex/: binding.cxx  binding.gyp  package.json  test.js
examples/javascript/enum/: binding.cxx  package.json  test.js
examples/javascript/functions/: binding.cxx  test.js
examples/javascript/functors/: binding.cxx  test.js
examples/javascript/vector/: binding.cxx  package.json  test.js
examples/javascript/wrapper/: binding.cxx  test.js
examples/lua/basic/: CMakeLists.txt  README.md  binding.cxx  test.lua
examples/python/basic/: CMakeLists.txt  README.md  binding.cxx  test.py
examples/python/functions/: CMakeLists.txt  binding.cxx  find_and_test.py  inspect.py  test.py
include/rosetta/: adapter.h  enum_registry.h  function_registry.h  info.h  introspectable.h  rosetta.h  type_registry.h  types.h
include/rosetta/generators/: js.h  lua.h  py.h
include/rosetta/generators/details/js/: js_arrays.h  js_common.h  js_enums.h  js_functions.h  js_functors.h  js_generator.h  js_pointers.h  js_vectors.h
include/rosetta/generators/details/js/inline/: js_arrays.hxx  js_enums.hxx  js_functions.hxx  js_functors.hxx  js_generator.hxx  js_pointers.hxx  js_vectors.hxx
include/rosetta/generators/details/lua/: lua_enums.h  lua_functions.h  lua_generator.h  lua_pointers.h  lua_vectors.h
include/rosetta/generators/details/lua/inline/: lua_enums.hxx  lua_generator.hxx
include/rosetta/generators/details/py/: py_enums.h  py_functions.h  py_functors.h  py_generator.h  py_pointers.h  py_vectors.h
include/rosetta/generators/details/py/inline/: py_enums.hxx  py_functors.hxx  py_generator.hxx
include/rosetta/inline/: enum_registry.hxx  function_registry.hxx  info.hxx  introspectable.hxx  type_registry.hxx  types.hxx
unittest/: TEST.h
